fix overflow in blog page

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -31,3 +31,7 @@ input:-webkit-autofill:focus {
 .prose figcaption {
   @apply text-center;
 }
+
+.prose a {
+  word-break: break-all;
+}
